# fastapi-boilerplate

./: .dockerignore  .env.example  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .pre-commit-config.yml  .safety-project.ini  .secrets.baseline  .yamllint.yml  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SETUP.md  alembic.ini  docker-compose.ci.yml  docker-compose.yml  mypy.ini  otel-collector-config.yml  prometheus.yml  pyproject.toml  ruff.toml
.github/workflows/: ci.yml  safety_scan.yml
app/: main.py
app/api/v1/: router.py
app/api/v1/endpoints/: __init__.py  auth.py  health.py  users.py
app/core/: cache.py  config.py  events.py  resilience.py  security.py  telemetry.py
app/db/: base.py  init_db.py  session.py
app/dependencies/: __init__.py  auth.py  db.py
app/middleware/: __init__.py  cors.py  logging.py  metrics.py  rate_limit.py  request_id.py  validation.py
app/models/: __init__.py  user.py
app/schemas/: __init__.py  message.py  token.py  user.py
app/services/: __init__.py  auth.py
app/utils/: error_handling.py  exceptions.py  logging.py
migrations/: env.py
tests/: conftest.py
tests/api/: test_auth.py  test_health.py  test_users.py
tests/core/: test_config.py  test_security.py
tests/services.py/: test_auth.py
