[tool.poetry]
name = "fastapi-boilerplate"
version = "1.0.0"
description = "Production-ready FastAPI backend boilerplate"
authors = ["Parth Joshi <parthjoshi.1618@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }
gunicorn = "^21.2.0"
sqlalchemy = "^2.0.0"
asyncpg = "^0.29.0"
alembic = "^1.13.0"
pyjwt = "^2.8.0"
passlib = { extras = ["argon2"], version = "^1.7.4" }
argon2-cffi = "^23.1.0"
pydantic = { extras = ["email"], version = "^2.7.0" }
pydantic-settings = "^2.2.0"
python-multipart = "^0.0.9"
structlog = "^24.1.0"
loguru = "^0.7.2"
slowapi = "^0.1.9"
redis = { extras = ["hiredis"], version = "^5.0.0" }
python-dotenv = "^1.0.0"
aiosqlite = "^0.21.0"
opentelemetry-api = "^1.21.0"
opentelemetry-sdk = "^1.21.0"
opentelemetry-instrumentation-fastapi = "^0.43b0"
opentelemetry-instrumentation-sqlalchemy = "^0.43b0"
opentelemetry-instrumentation-redis = "^0.43b0"
opentelemetry-exporter-otlp = "^1.21.0"
opentelemetry-exporter-jaeger = "^1.21.0"
aiocache = "^0.12.2"
tenacity = "^8.2.3"
circuitbreaker = "^2.0.0"
celery = { extras = ["redis"], version = "^5.3.0" }
prometheus-client = "^0.20.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.0"
pytest-asyncio = "^0.23.0"
httpx = "^0.27.0"
ruff = "^0.3.0"
mypy = "^1.9.0"
pre-commit = "^3.7.0"
types-passlib = "^1.7.7"
types-redis = "^4.6.0"
pytest-cov = "^5.0"  # ← ADDED for --cov flags

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# ————————————————————————
# TOOL CONFIGURATIONS
# ————————————————————————

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "I",   # isort
  "N",   # pep8-naming
  "W",   # pycodestyle warnings
  "UP",  # pyupgrade
  "B",   # flake8-bugbear
  "A",   # flake8-builtins
  "C4",  # flake8-comprehensions
  "DTZ", # flake8-datetimez
  "T10", # flake8-debugger
  "EM",  # flake8-errmsg
  "ISC", # flake8-implicit-str-concat
  "ICN", # flake8-import-conventions
  "PIE", # flake8-pie
  "PT",  # flake8-pytest-style
  "Q",   # flake8-quotes
  "RSE", # flake8-raise
  "RET", # flake8-return
  "SIM", # flake8-simplify
  "TID", # flake8-tidy-imports
  "ERA", # eradicate
  "PL",  # pylint
  "RUF", # ruff-specific rules
]
ignore = [
  "E501",    # line too long (handled by formatter)
  "PLR0913", # too many arguments
  "PLR2004", # magic value comparison
  "EM101",
  "ISC001",  # conflicts with formatter
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports
"tests/*" = ["PLR2004"]   # magic values in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# ————————————————————————
# MYPY
# ————————————————————————

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
strict_equality = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
  "slowapi.*",
  "loguru.*",
  "alembic.*"
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# ————————————————————————
# PYTEST
# ————————————————————————

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short --cov=app --cov-report=xml --cov-report=term-missing"

# ————————————————————————
# COVERAGE
# ————————————————————————

[tool.coverage.run]
branch = true
source = ["app"]

[tool.coverage.paths]
combine = ["app"]

[tool.coverage.report]
fail_under = 0        # Set to 80+ later to enforce coverage
show_missing = true
skip_covered = false
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "raise AssertionError",
  "raise ImportError"
]