[tool.poetry]
name = "fastapi-boilerplate"
version = "1.1.0"
description = "Production-ready FastAPI backend boilerplate"
authors = ["Parth Joshi <parthjoshi.1618@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.120.0"
starlette = "^0.49.1"
uvicorn = { extras = ["standard"], version = "^0.38.0" }
gunicorn = "^23.0.0"
sqlalchemy = "^2.0.44"
asyncpg = "^0.30.0"
alembic = "^1.17.1"
pyjwt = "^2.10.1"
passlib = { extras = ["argon2"], version = "^1.7.4" }
argon2-cffi = "^25.1.0"
pydantic = { extras = ["email"], version = "^2.12.3" }
pydantic-settings = "^2.11.0"
python-multipart = "^0.0.20"
structlog = "^25.5.0"
loguru = "^0.7.3"
slowapi = "^0.1.9"
redis = { extras = ["hiredis"], version = "^6.4.0" }
python-dotenv = "^1.2.1"
aiosqlite = "^0.21.0"
opentelemetry-api = "^1.38.0"
opentelemetry-sdk = "^1.38.0"
opentelemetry-instrumentation-fastapi = "^0.59b0"
opentelemetry-instrumentation-sqlalchemy = "^0.59b0"
opentelemetry-instrumentation-redis = "^0.59b0"
opentelemetry-exporter-otlp = "^1.38.0"
aiocache = "^0.12.3"
tenacity = "^9.1.2"
circuitbreaker = "^2.1.3"
celery = { extras = ["redis"], version = "^5.5.3" }
prometheus-client = "^0.23.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-asyncio = "^1.2.0"
httpx = "^0.28.1"
ruff = "^0.14.3"
mypy = "^1.18.2"
pre-commit = "^4.3.0"
types-passlib = "^1.7.7.20250602"
types-redis = "^4.6.0.20241004"
pytest-cov = "^7.0.0"
bandit = { extras = ["toml"], version = "^1.8.6" }
pydocstyle = "^6.3.0"
yamllint = "^1.37.1"
detect-secrets = "^1.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# ════════════════════════════════════════════════════════════
# TOOL CONFIGURATIONS
# ════════════════════════════════════════════════════════════

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "N",
  "W",
  "UP",
  "B",
  "A",
  "C4",
  "DTZ",
  "T10",
  "EM",
  "ISC",
  "ICN",
  "PIE",
  "PT",
  "Q",
  "RSE",
  "RET",
  "SIM",
  "TID",
  "ERA",
  "PL",
  "RUF",
]
ignore = [
  "E501",
  "PLR0913",
  "PLR2004",
  "UP035",
  "UP038",
  "UP017",
  "EM101",
  "ISC001",
  "PT023",
  "PT001",
  "PLC0415",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# ════════════════════════════════════════════════════════════
# MYPY
# ════════════════════════════════════════════════════════════

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
strict_equality = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["slowapi.*", "loguru.*", "alembic.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short --cov=app --cov-report=xml --cov-report=term-missing"

[tool.coverage.run]
branch = true
source = ["app"]

[tool.coverage.paths]
combine = ["app"]

[tool.coverage.report]
fail_under = 0
show_missing = true
skip_covered = false
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "raise AssertionError",
  "raise ImportError",
]

[tool.bandit]
exclude_dirs = ["tests", ".venv", "venv", "alembic/versions", "scripts"]
skips = ["B101", "B601", "B104"]
tests = [
  "B201",
  "B301",
  "B302",
  "B303",
  "B304",
  "B305",
  "B306",
  "B307",
  "B308",
  # "B309",
  "B310",
  "B311",
  "B312",
  "B313",
  "B314",
  "B315",
  "B316",
  "B317",
  "B318",
  "B319",
  "B320",
  "B321",
  "B323",
  "B324",
  # "B325",
  "B401",
  "B402",
  "B403",
  "B404",
  "B405",
  "B406",
  "B407",
  "B408",
  "B409",
  "B410",
  "B411",
  "B412",
  "B413",
  "B501",
  "B502",
  "B503",
  "B504",
  "B505",
  "B506",
  "B507",
  "B508",
  "B509",
  # "B601",
  "B602",
  "B603",
  "B604",
  "B605",
  "B606",
  "B607",
  "B608",
  "B609",
  "B610",
  "B611",
  "B701",
  "B702",
  "B703",
]

[tool.pydocstyle]
convention = "google"
add_ignore = ["D100", "D104", "D105", "D107", "D103", "D212"]
match = "(?!test_).*\\.py"
match_dir = "^(?!(tests|alembic|scripts|migrations)).*"
